fix(ingredient-item): fixed ingredient name alignment

--- a/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
+++ b/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
@@ -13,3 +13,7 @@
   align-items: center;
   gap: 8px;
 }
+
+.name {
+  text-align: center;
+}
